#820 - better translation names for letters G, H anf I, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -601,9 +601,9 @@ general.files=Dateien
 general.folder=Folder
 general.folder.public=\u00d6ffentlich (f\u00fcr jeden Benutzer sichtbar)
 general.folder.secret=Privat (ben\u00f6tigt eine Einladung)
-general.foldername=Name
+general.folder_name=Name
 general.friday=Freitag
-general.friendlist=Freunde
+general.friend_list=Freunde
 general.from=von
 general.help=Hilfe
 general.hide=Verstecken
@@ -612,7 +612,7 @@ general.inet=Internet
 general.invitor=Von
 general.lan_only=Nur LAN
 general.local_copy_at=Lokaler Speicherort
-general.localcopyplace=W\u00e4hlen den lokalen Speicherort
+general.local_copy_place=W\u00e4hlen den lokalen Speicherort
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
 general.member=Benutzer
@@ -622,8 +622,8 @@ general.monday=Montag
 general.more=Mehr
 general.more.lower_case=mehr
 general.neverAskAgain=Nicht mehr fragen
-general.notavailable=nicht verf\u00fcgbar
-general.notfound=nicht gefunden
+general.not_available=nicht verf\u00fcgbar
+general.not_found=nicht gefunden
 general.ok=OK
 general.ok.key=\u00dc
 general.overwrite=\u00dcberschreiben
@@ -654,19 +654,19 @@ hide_preview.description=Vorschau-Folder nicht in der Liste anzeigen
 hide_preview.key=V
 hide_preview.name=Vorschau-Folder ausblenden
 
-hideoffline.description=Es werden nur Computer angezeigt, die gerade online sind
-hideoffline.key=O
-hideoffline.name=Nur Computer anzeigen, die online sind
+hide_offline.description=Es werden nur Computer angezeigt, die gerade online sind
+hide_offline.key=O
+hide_offline.name=Nur Computer anzeigen, die online sind
 
-imagefileinfo.resolution=Aufl\u00f6sung
-imagefileinfo.unknown=unbekannt
+image_file_info.resolution=Aufl\u00f6sung
+image_file_info.unknown=unbekannt
 
-infoside.title=Information
+info_side.title=Information
 
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
-invitationfiles.description=PowerFolder Einladungen
+invitation_files.description=PowerFolder Einladungen
 
 invite_received_handler.notify.message=Sie haben eine Einladung von {0} erhalten.
 invite_received_handler.notify.title=Einladung erhalten
