--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -538,9 +538,9 @@ general.files=Files
 general.folder=Folder
 general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
-general.foldername=Name
+general.folder_name=Name
 general.friday=Friday
-general.friendlist=Friend List
+general.friend_list=Friend List
 general.from=from
 general.help=help
 general.hide=hide
@@ -549,7 +549,7 @@ general.inet=Internet
 general.invitor=Inviter
 general.lan_only=LAN only
 general.local_copy_at=Local copy at
-general.localcopyplace=Choose a place for local copy
+general.local_copy_place=Choose a place for local copy
 general.localized_date_format=dd MMMM yyyy
 general.localnet=LAN
 general.member=Member
@@ -559,8 +559,8 @@ general.monday=Monday
 general.more=More
 general.more.lower_case=more
 general.neverAskAgain=Never ask this again
-general.notavailable=not available
-general.notfound=not found
+general.not_available=not available
+general.not_found=not found
 general.ok=OK
 general.ok.key=O
 general.overwrite=Overwrite
@@ -586,18 +586,18 @@ general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=Yesterday
 
-hideoffline.description=Offline users will be filtered from this search result
-hideoffline.key=H
-hideoffline.name=Hide offline users
+hide_offline.description=Offline users will be filtered from this search result
+hide_offline.key=H
+hide_offline.name=Hide offline users
 
 hide_preview.description=Preview folders will be removed from lists of folders
 hide_preview.key=H
 hide_preview.name=Hide Preview Folders
 
-imagefileinfo.resolution=Resolution
-imagefileinfo.unknown=Unknown
+image_file_info.resolution=Resolution
+image_file_info.unknown=Unknown
 
-infoside.title=Information
+info_side.title=Information
 
 invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.title=Unable to write invitation
@@ -605,7 +605,7 @@ invitation.utils.unable.write.title=Unable to write invitation
 invite_received_handler.notify.title=Invitation Received
 invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 
-invitationfiles.description=PowerFolder invitations
+invitation_files.description=PowerFolder invitations
 
 limitedconnection.dont_autodetect=No longer detect limited connectivity
 limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
