--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -531,9 +531,9 @@ general.files=Archivos
 general.folder=Carpeta
 general.folder.public=P\u00FAblico (visible para todos)
 general.folder.secret=Privado (requiere invitaci\u00F3n)
-general.foldername=Nombre
+general.folder_name=Nombre
 general.friday=Viernes
-general.friendlist=Lista de amigos
+general.friend_list=Lista de amigos
 general.from=de
 general.help=ayuda
 general.hide=ocultar
@@ -542,7 +542,7 @@ general.inet=i-net
 general.invitor=Invitador
 general.lan_only=LAN solamente
 general.local_copy_at=Copia local en
-general.localcopyplace=Elija un lugar para la copia local
+general.local_copy_place=Elija un lugar para la copia local
 general.localized_date_format=MMMM dd. yyyy (M\:M\u00E9s d\:d\u00EDa y\:a\u00F1o)
 general.localnet=red local
 general.member=Miembro
@@ -552,8 +552,8 @@ general.monday=Lunes
 general.more=M\u00E1s
 general.more.lower_case=m\u00E1s
 general.neverAskAgain=Jam\u00E1s volver a preguntar
-general.notavailable=no disponible
-general.notfound=no encontrado
+general.not_available=no disponible
+general.not_found=no encontrado
 general.ok=Aceptar
 general.ok.key=O
 general.overwrite=Sobreescribir
@@ -584,19 +584,19 @@ hide_preview.description=Las carpetas de previsaulizaci\u00F3n van a ser removid
 hide_preview.key=H
 hide_preview.name=Esconder Carpetas de Previsualizaci\u00F3n
 
-hideoffline.description=Los usuarios offline ser\u00E1n filtrados de esta b\u00FAsqueda
-hideoffline.key=H
-hideoffline.name=Ocultar usuarios offline
+hide_offline.description=Los usuarios offline ser\u00E1n filtrados de esta b\u00FAsqueda
+hide_offline.key=H
+hide_offline.name=Ocultar usuarios offline
 
-imagefileinfo.resolution=Resoluci\u00F3n
-imagefileinfo.unknown=Desconocido
+image_file_info.resolution=Resoluci\u00F3n
+image_file_info.unknown=Desconocido
 
-infoside.title=Informaci\u00F3n
+info_side.title=Informaci\u00F3n
 
 invitation.utils.unable.write.text=Hubo un error al escribir la invitaci\u00FAn, favor de volver a intentar.
 invitation.utils.unable.write.title=Incapaz de escribir la invitaci\u00F3n
 
-invitationfiles.description=Invitaciones PowerFolder
+invitation_files.description=Invitaciones PowerFolder
 
 invite_received_handler.notify.message=Acabas de recibier una invitaci\u00F3n PowerFolder de {0}.
 invite_received_handler.notify.title=Invitaci\u00F3n recibida
