--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -534,9 +534,9 @@ general.files=Fichiers
 general.folder=Dossier(s) partag\u00E9(s)
 general.folder.public=Public (visible de tous les utilisateurs)
 general.folder.secret=Priv\u00E9 (n\u00E9cessite un fichier d'Invitation)
-general.foldername=Nom
+general.folder_name=Nom
 general.friday=Vendredi
-general.friendlist=Liste d'ami(e)s
+general.friend_list=Liste d'ami(e)s
 general.from=de
 general.help=Aide
 general.hide=cach\u00E9
@@ -545,7 +545,7 @@ general.inet=i-net
 general.invitor=Inviteur
 general.lan_only=LAN uniquement
 general.local_copy_at=Emplacement du dossier \u00E0 partager
-general.localcopyplace=Choisir un emplacement pour une copie locale
+general.local_copy_place=Choisir un emplacement pour une copie locale
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=local
 general.member=Membre
@@ -555,8 +555,8 @@ general.monday=Lundi
 general.more=Plus
 general.more.lower_case=plus
 general.neverAskAgain=Ne plus me le demander
-general.notavailable=indisponible
-general.notfound=non identifi\u00E9
+general.not_available=indisponible
+general.not_found=non identifi\u00E9
 general.ok=OK
 general.ok.key=O
 general.overwrite=Ecraser
@@ -587,19 +587,19 @@ hide_preview.description=Les dossiers pr\u00E9visualis\u00E9s seront sortis de l
 hide_preview.key=H
 hide_preview.name=Cacher les dossiers pr\u00E9visualis\u00E9s
 
-hideoffline.description=Les utilisateurs hors connexion seront retir\u00E9s des r\u00E9sultats
-hideoffline.key=H
-hideoffline.name=Cacher les utilisateurs hors connexion
+hide_offline.description=Les utilisateurs hors connexion seront retir\u00E9s des r\u00E9sultats
+hide_offline.key=H
+hide_offline.name=Cacher les utilisateurs hors connexion
 
-imagefileinfo.resolution=R\u00E9solution
-imagefileinfo.unknown=Inconnu
+image_file_info.resolution=R\u00E9solution
+image_file_info.unknown=Inconnu
 
-infoside.title=Information
+info_side.title=Information
 
 invitation.utils.unable.write.text=Erreur pendant la cr\u00E9ation de l'invitation, merci d'essayer \u00E0 nouveau.
 invitation.utils.unable.write.title=Impossible de cr\u00E9er l'invitation
 
-invitationfiles.description=Invitations PowerFolder
+invitation_files.description=Invitations PowerFolder
 
 invite_received_handler.notify.message=Vous avez re\u00E7u une invitation PowerFolder de {0}.
 invite_received_handler.notify.title=Invitation re\u00E7ue
