--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -532,9 +532,9 @@ general.files=Files
 general.folder=Cartella
 general.folder.public=Pubblica (visibile a tutti)
 general.folder.secret=Privata (richiede invito)
-general.foldername=Nome
+general.folder_name=Nome
 general.friday=Venerd\u00EC
-general.friendlist=Lista amici
+general.friend_list=Lista amici
 general.from=da
 general.help=aiuto
 general.hide=nascondi
@@ -543,7 +543,7 @@ general.inet=i-rete
 general.invitor=Invitante
 general.lan_only=solo LAN
 general.local_copy_at=Copia locale a
-general.localcopyplace=Scegli un posto per la copia locale
+general.local_copy_place=Scegli un posto per la copia locale
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=locale
 general.member=Membro
@@ -553,8 +553,8 @@ general.monday=Luned\u00EC
 general.more=Ancora
 general.more.lower_case=ancora
 general.neverAskAgain=Non chiederlo pi\u00F9
-general.notavailable=non disponibile
-general.notfound=non trovato
+general.not_available=non disponibile
+general.not_found=non trovato
 general.ok=OK
 general.ok.key=O
 general.overwrite=Sovrascrivi
@@ -585,19 +585,19 @@ hide_preview.description=Le cartelle di anteprima verranno rimosse dalla lista d
 hide_preview.key=N
 hide_preview.name=Nascondi Cartelle di Anteprima
 
-hideoffline.description=Gli utenti offline saranno filtrati dal risultato di questa ricerca
-hideoffline.key=N
-hideoffline.name=Nascondi utenti offline
+hide_offline.description=Gli utenti offline saranno filtrati dal risultato di questa ricerca
+hide_offline.key=N
+hide_offline.name=Nascondi utenti offline
 
-imagefileinfo.resolution=Risoluzione
-imagefileinfo.unknown=Sconosciuto
+image_file_info.resolution=Risoluzione
+image_file_info.unknown=Sconosciuto
 
-infoside.title=Informazione
+info_side.title=Informazione
 
 invitation.utils.unable.write.text=Errore nella scrittura dell'invito, si prega di riprovare.
 invitation.utils.unable.write.title=Impossibile scrivere l'invito
 
-invitationfiles.description=Inviti PowerFolder
+invitation_files.description=Inviti PowerFolder
 
 invite_received_handler.notify.message=Hai ricevuto un invito PowerFolder da {0}.
 invite_received_handler.notify.title=Invito Ricevuto
