--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -532,9 +532,9 @@ general.files=Pliki
 general.folder=Folder
 general.folder.public=Publiczny (widoczny dla wszystkich)
 general.folder.secret=Prywatny (wymaga zaproszenia)
-general.foldername=Nazwa
+general.folder_name=Nazwa
 general.friday=Pi\u0105tek
-general.friendlist=Lista znajomych
+general.friend_list=Lista znajomych
 general.from=od/z
 general.help=pomoc
 general.hide=schowaj
@@ -543,7 +543,7 @@ general.inet=Internet
 ##general.invitor=Invitor
 ##general.lan_only=LAN only
 general.local_copy_at=Lokalna kopia w
-general.localcopyplace=Wybierz miejsce dla lokalnej kopii
+general.local_copy_place=Wybierz miejsce dla lokalnej kopii
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
 general.member=Cz\u0142onek
@@ -553,8 +553,8 @@ general.monday=Poniedzia\u0142ek
 ##general.more=More
 ##general.more.lower_case=more
 ##general.neverAskAgain=Never ask this again
-general.notavailable=niedost\u0119pny
-general.notfound=nie znaleziono
+general.not_available=niedost\u0119pny
+general.not_found=nie znaleziono
 general.ok=OK
 general.ok.key=O
 general.overwrite=Nadpisz
@@ -585,19 +585,19 @@ general.yesterday=wczoraj
 ##hide_preview.key=H
 ##hide_preview.name=Hide Preview Folders
 
-hideoffline.description=Nie po\u0142\u0105czeni u\u017cytkownicy nie b\u0119d\u0105 wy\u015bwietlani w rezultatach wyszukiwania
-hideoffline.key=H
-hideoffline.name=Ukryj nie po\u0142\u0105czonych u\u017cytkownik\u00f3w
+hide_offline.description=Nie po\u0142\u0105czeni u\u017cytkownicy nie b\u0119d\u0105 wy\u015bwietlani w rezultatach wyszukiwania
+hide_offline.key=H
+hide_offline.name=Ukryj nie po\u0142\u0105czonych u\u017cytkownik\u00f3w
 
-imagefileinfo.resolution=Rozdzielczo\u015b\u0107
-imagefileinfo.unknown=Nieznane
+image_file_info.resolution=Rozdzielczo\u015b\u0107
+image_file_info.unknown=Nieznane
 
-infoside.title=Informacje
+info_side.title=Informacje
 
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
-invitationfiles.description=Zaproszenia PowerFolder
+invitation_files.description=Zaproszenia PowerFolder
 
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
