--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -466,9 +466,9 @@ general.files=Arquivos
 general.folder=Pasta
 general.folder.public=Publico (vis\u00edvel a todos)
 general.folder.secret=Privado (requer convite)
-general.foldername=Nome
+general.folder_name=Nome
 general.friday=Sexta-feira
-general.friendlist=Lista de Amigos
+general.friend_list=Lista de Amigos
 general.from=de
 general.help=ajuda
 general.hide=esconder
@@ -476,7 +476,7 @@ general.hours=Hora(s)
 general.inet=Internet
 general.invitor=Anfitri\u00e3o
 general.local_copy_at=C\u00f3pia local em
-general.localcopyplace=Escolha um lugar para a c\u00f3pia local
+general.local_copy_place=Escolha um lugar para a c\u00f3pia local
 general.localized_date_format=dd MMMM yyyy
 general.localnet=Rede local
 general.member=Membro
@@ -485,8 +485,8 @@ general.minutes=Minuto(s)
 general.monday=Segunda-feira
 general.more=Mais
 general.neverAskAgain=N\u00e3o pergunte isto novamente
-general.notavailable=n\u00e3o dispon\u00edvel
-general.notfound=n\u00e3o encontrado
+general.not_available=n\u00e3o dispon\u00edvel
+general.not_found=n\u00e3o encontrado
 general.notonfriends=Buscar Usu\u00e1rios
 general.ok=OK
 general.ok.key=O
@@ -515,23 +515,23 @@ general.whatisthis=O que \u00e9 isto?
 general.what_is_this=O que \u00e9 isto?
 general.yesterday=ontem
 
-hideoffline.description=Apenas usu\u00e1rios online ser\u00e3o considerados nesta busca
-hideoffline.key=M
-hideoffline.name=Mostrar apenas usu\u00e1rios online
+hide_offline.description=Apenas usu\u00e1rios online ser\u00e3o considerados nesta busca
+hide_offline.key=M
+hide_offline.name=Mostrar apenas usu\u00e1rios online
 
 ignorefile.description=Arquivo(s) n\u00e3o ser\u00e3o baixados/compartilhados
 ignorefile.key=E
 ignorefile.name=Adicionar Arquivo no filtro de exclus\u00e3o
 
-imagefileinfo.resolution=Resolu\u00e7\u00e3o
-imagefileinfo.unknown=Desconhecido
+image_file_info.resolution=Resolu\u00e7\u00e3o
+image_file_info.unknown=Desconhecido
 
-infoside.title=Informa\u00e7\u00e3o
+info_side.title=Informa\u00e7\u00e3o
 
 invitation.utils.unable.write.text=Erro durante o convite, por favor tente novamente.
 invitation.utils.unable.write.title=N\u00e3o \u00e9 poss\u00edvel realizar o convite
 
-invitationfiles.description=Convites da pasta PowerFolder 
+invitation_files.description=Convites da pasta PowerFolder 
 
 limitedconnection.dont_autodetect=N\u00e3o detectar conex\u00e3o limitada
 limitedconnection.text=PowerFolder detectou conex\u00e3o limitada \u00e0 rede.\nIsto pode ser causado pela firewall, roteador ou uma conex\u00e3o compartilhada do windows.\nA documenta\u00e7\u00e3o prov\u00ea informa\u00e7\u00f5es em como melhorar a conex\u00e3o.\nhttp\://docs.powerfolder.com
