--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -532,9 +532,9 @@ general.files=Filer
 general.folder=Folder
 general.folder.public=Offentlig (synlig f\u00f6r alla)
 general.folder.secret=Privat (Kr\u00e4ver inbjudan)
-general.foldername=Namn
+general.folder_name=Namn
 ##general.friday=Friday
-general.friendlist=V\u00e4nlista
+general.friend_list=V\u00e4nlista
 general.from=fr\u00e5n
 general.help=hj\u00e4lp
 general.hide=g\u00f6m
@@ -543,7 +543,7 @@ general.inet=Internet
 ##general.invitor=Invitor
 ##general.lan_only=LAN only
 general.local_copy_at=Lokal kopia
-general.localcopyplace=V\u00e4lj en plats f\u00f6r lokal kopia
+general.local_copy_place=V\u00e4lj en plats f\u00f6r lokal kopia
 general.localized_date_format=yyyy MMMM dd
 general.localnet=LAN
 general.member=Medlem
@@ -553,8 +553,8 @@ general.member=Medlem
 ##general.more=More
 ##general.more.lower_case=more
 ##general.neverAskAgain=Never ask this again
-general.notavailable=ej tillg\u00e4nglig
-general.notfound=ej hittad
+general.not_available=ej tillg\u00e4nglig
+general.not_found=ej hittad
 general.ok=OK
 general.ok.key=O
 general.overwrite=Skriv \u00f6ver
@@ -585,19 +585,19 @@ general.yesterday=ig\u00e5r
 ##hide_preview.key=H
 ##hide_preview.name=Hide Preview Folders
 
-hideoffline.description=Endast anv\u00e4ndare som \u00e4r online visas i detta s\u00f6kresultat 
-hideoffline.key=O
-hideoffline.name=Visa endast anv\u00e4ndare online
+hide_offline.description=Endast anv\u00e4ndare som \u00e4r online visas i detta s\u00f6kresultat
+hide_offline.key=O
+hide_offline.name=Visa endast anv\u00e4ndare online
 
-imagefileinfo.resolution=Uppl\u00f6sning
-imagefileinfo.unknown=Ok\u00e4nd 
+image_file_info.resolution=Uppl\u00f6sning
+image_file_info.unknown=Ok\u00e4nd
 
-infoside.title=Information
+info_side.title=Information
 
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
-invitationfiles.description=PowerFolder inbjudningar
+invitation_files.description=PowerFolder inbjudningar
 
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
