--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -531,9 +531,9 @@ general.files=\u6587\u4ef6
 general.folder=\u6587\u4ef6\u5939
 general.folder.public=\u516c\u5171\uff08\u6240\u6709\u4eba\u53ef\u89c1\uff09
 general.folder.secret=\u79c1\u6709\uff08\u8981\u6c42\u9080\u8bf7\uff09
-general.foldername=\u540d\u79f0
+general.folder_name=\u540d\u79f0
 general.friday=\u661f\u671f\u4e94
-general.friendlist=\u597d\u53cb\u5217\u8868
+general.friend_list=\u597d\u53cb\u5217\u8868
 general.from=\u6765\u81ea
 general.help=\u5e2e\u52a9
 general.hide=\u9690\u85cf
@@ -542,7 +542,7 @@ general.inet=i-net
 general.invitor=\u9080\u8bf7\u8005
 general.lan_only=\u53ea\u5bf9\u5c40\u57df\u7f51
 general.local_copy_at=\u672c\u5730\u526f\u672c
-general.localcopyplace=\u9009\u62e9\u5b58\u653e\u672c\u5730\u526f\u672c\u7684\u4f4d\u7f6e
+general.local_copy_place=\u9009\u62e9\u5b58\u653e\u672c\u5730\u526f\u672c\u7684\u4f4d\u7f6e
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=\u672c\u5730
 general.member=\u6210\u5458
@@ -552,8 +552,8 @@ general.monday=\u661f\u671f\u4e00
 general.more=\u66f4\u591a
 general.more.lower_case=\u66f4\u591a
 general.neverAskAgain=\u4e0d\u518d\u8be2\u95ee
-general.notavailable=\u65e0\u6548
-general.notfound=\u6ca1\u6709\u627e\u5230
+general.not_available=\u65e0\u6548
+general.not_found=\u6ca1\u6709\u627e\u5230
 general.ok=\u786e\u5b9a
 general.ok.key=O
 general.overwrite=\u8986\u76d6
@@ -584,19 +584,19 @@ hide_preview.description=Preview folders will be removed from lists of folders
 hide_preview.key=H
 hide_preview.name=\u9690\u85cf\u9884\u89c8\u6587\u4ef6\u5939
 
-hideoffline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237
-hideoffline.key=H
-hideoffline.name=\u9690\u85cf\u79bb\u7ebf\u7528\u6237
+hide_offline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237
+hide_offline.key=H
+hide_offline.name=\u9690\u85cf\u79bb\u7ebf\u7528\u6237
 
-imagefileinfo.resolution=\u5206\u8fa8\u7387
-imagefileinfo.unknown=\u672a\u77e5
+image_file_info.resolution=\u5206\u8fa8\u7387
+image_file_info.unknown=\u672a\u77e5
 
-infoside.title=\u4fe1\u606f
+info_side.title=\u4fe1\u606f
 
 invitation.utils.unable.write.text=\u5199\u5165\u9080\u8bf7\u65f6\u51fa\u9519\uff0c\u8bf7\u91cd\u8bd5\u3002
 invitation.utils.unable.write.title=\u4e0d\u80fd\u5199\u5165\u9080\u8bf7
 
-invitationfiles.description=PowerFolder \u9080\u8bf7
+invitation_files.description=PowerFolder \u9080\u8bf7
 
 invite_received_handler.notify.message=\u4f60\u6536\u5230\u4e00\u4e2a\u6765\u81ea{0}\u7684PowerFolder\u9080\u8bf7\u3002
 invite_received_handler.notify.title=\u6536\u5230\u9080\u8bf7
