--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -532,9 +532,9 @@ general.files=\u0645\u0644\u0641\u0627\u062a
 general.folder=\u0645\u062c\u0644\u062f
 general.folder.public=\u0639\u0627\u0645 (\u0645\u0631\u0626\u064a \u0644\u0644\u062c\u0645\u064a\u0639)
 general.folder.secret=\u062e\u0627\u0635 (\u064a\u062a\u0637\u0644\u0628 \u062f\u0639\u0648\u0629)
-general.foldername=\u0627\u0644\u0627\u0633\u0645
+general.folder_name=\u0627\u0644\u0627\u0633\u0645
 general.friday=\u0627\u0644\u062c\u0645\u0639\u0629
-general.friendlist=\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621
+general.friend_list=\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621
 general.from=\u0645\u0646
 general.help=\u0627\u0644\u0645\u0633\u0627\u0639\u062f\u0629
 general.hide=\u0625\u062e\u0641\u0627\u0621
@@ -543,7 +543,7 @@ general.inet=\u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
 ##general.invitor=Invitor
 ##general.lan_only=LAN only
 general.local_copy_at=\u0646\u0633\u062e \u0645\u062d\u0644\u064a \u0639\u0644\u0649
-general.localcopyplace=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u0627 \u0644\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a
+general.local_copy_place=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u0627 \u0644\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=\u0634\u0628\u0643\u0629
 general.member=\u0639\u0636\u0648
@@ -553,8 +553,8 @@ general.monday=\u0627\u0644\u0627\u062b\u0646\u064a\u0646
 ##general.more=More
 ##general.more.lower_case=more
 ##general.neverAskAgain=Never ask this again
-general.notavailable=\u063a\u064a\u0631 \u0645\u062a\u0627\u062d
-general.notfound=\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f
+general.not_available=\u063a\u064a\u0631 \u0645\u062a\u0627\u062d
+general.not_found=\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f
 general.ok=\u0645\u0648\u0627\u0641\u0642
 general.ok.key=\u062e
 general.overwrite=\u0627\u0633\u062a\u0628\u062f\u0627\u0644
@@ -585,19 +585,19 @@ general.yesterday=\u0627\u0644\u0628\u0627\u0631\u062d\u0629
 ##hide_preview.key=H
 ##hide_preview.name=Hide Preview Folders
 
-hideoffline.description=\u0633\u0648\u0641 \u064a\u062a\u0645 \u0627\u0633\u062a\u0628\u0639\u0627\u062f \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0627\u0644\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u064a\u0646 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637 \u0645\u0646 \u0647\u0630\u0627 \u0627\u0644\u0628\u062d\u062b
-hideoffline.key=\u0627
-hideoffline.name=\u0623\u062e\u0641\u064a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0627\u0644\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u064a\u0646 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637
+hide_offline.description=\u0633\u0648\u0641 \u064a\u062a\u0645 \u0627\u0633\u062a\u0628\u0639\u0627\u062f \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0627\u0644\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u064a\u0646 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637 \u0645\u0646 \u0647\u0630\u0627 \u0627\u0644\u0628\u062d\u062b
+hide_offline.key=\u0627
+hide_offline.name=\u0623\u062e\u0641\u064a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0627\u0644\u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u064a\u0646 \u0639\u0644\u0649 \u0627\u0644\u062e\u0637
 
-imagefileinfo.resolution=\u0642\u0631\u0627\u0631
-imagefileinfo.unknown=\u063a\u064a\u0631 \u0645\u0639\u0631\u0648\u0641
+image_file_info.resolution=\u0642\u0631\u0627\u0631
+image_file_info.unknown=\u063a\u064a\u0631 \u0645\u0639\u0631\u0648\u0641
 
-infoside.title=\u0645\u0639\u0644\u0648\u0645\u0627\u062a
+info_side.title=\u0645\u0639\u0644\u0648\u0645\u0627\u062a
 
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
-invitationfiles.description=PowerFolder \u062f\u0639\u0648\u0627\u062a
+invitation_files.description=PowerFolder \u062f\u0639\u0648\u0627\u062a
 
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
