--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -530,9 +530,9 @@ general.files=\u30D5\u30A1\u30A4\u30EB
 general.folder=\u30D5\u30A9\u30EB\u30C0
 general.folder.public=\u30D1\u30D6\u30EA\u30C3\u30AF\uFF08\u5168\u54E1\u306B\u516C\u958B\uFF09
 general.folder.secret=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8\uFF08\u62DB\u5F85\u8005\u306E\u307F\uFF09
-general.foldername=\u540D\u524D
+general.folder_name=\u540D\u524D
 general.friday=\u91D1\u66DC\u65E5
-general.friendlist=\u53CB\u4EBA\u30EA\u30B9\u30C8
+general.friend_list=\u53CB\u4EBA\u30EA\u30B9\u30C8
 general.from=from
 general.help=\u30D8\u30EB\u30D7
 general.hide=\u96A0\u3059
@@ -541,7 +541,7 @@ general.inet=i-net
 general.invitor=\u62DB\u5F85\u4E3B
 general.lan_only=LAN \u9650\u5B9A
 general.local_copy_at=\u30ED\u30FC\u30AB\u30EB\u30B3\u30D4\u30FC\u306E\u5834\u6240
-general.localcopyplace=\u30ED\u30FC\u30AB\u30EB\u30B3\u30D4\u30FC\u306E\u5834\u6240\u306E\u9078\u629E
+general.local_copy_place=\u30ED\u30FC\u30AB\u30EB\u30B3\u30D4\u30FC\u306E\u5834\u6240\u306E\u9078\u629E
 general.localized_date_format=yyyy MMMM dd.
 general.localnet=\u30ED\u30FC\u30AB\u30EB
 general.member=\u30E1\u30F3\u30D0\u30FC
@@ -551,8 +551,8 @@ general.monday=\u6708\u66DC\u65E5
 general.more=\u8A73\u7D30
 general.more.lower_case=\u8A73\u7D30
 general.neverAskAgain=\u4ECA\u5F8C\u3053\u306E\u8CEA\u554F\u3092\u3057\u306A\u3044
-general.notavailable=\u53D6\u5F97\u4E0D\u53EF
-general.notfound=\u767A\u898B\u4E0D\u53EF
+general.not_available=\u53D6\u5F97\u4E0D\u53EF
+general.not_found=\u767A\u898B\u4E0D\u53EF
 general.ok=\u4E86\u89E3(O)
 general.ok.key=O
 general.overwrite=\u4E0A\u66F8\u304D
@@ -583,19 +583,19 @@ hide_preview.description=\u30D7\u30EC\u30D3\u30E5\u30FC\u30D5\u30A9\u30EB\u30C0\
 hide_preview.key=H
 hide_preview.name=\u30D7\u30EC\u30D3\u30E5\u30FC\u30D5\u30A9\u30EB\u30C0\u3092\u96A0\u3059(H)
 
-hideoffline.description=\u3053\u306E\u691C\u7D22\u7D50\u679C\u304B\u3089\u30AA\u30D5\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC\u3092\u9664\u5916\u3057\u3066\u975E\u8868\u793A
-hideoffline.key=H
-hideoffline.name=\u30AA\u30D5\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC\u3092\u96A0\u3059(H)
+hide_offline.description=\u3053\u306E\u691C\u7D22\u7D50\u679C\u304B\u3089\u30AA\u30D5\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC\u3092\u9664\u5916\u3057\u3066\u975E\u8868\u793A
+hide_offline.key=H
+hide_offline.name=\u30AA\u30D5\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC\u3092\u96A0\u3059(H)
 
-imagefileinfo.resolution=\u89E3\u50CF\u5EA6
-imagefileinfo.unknown=\u4E0D\u660E
+image_file_info.resolution=\u89E3\u50CF\u5EA6
+image_file_info.unknown=\u4E0D\u660E
 
-infoside.title=\u60C5\u5831
+info_side.title=\u60C5\u5831
 
 invitation.utils.unable.write.text=\u62DB\u5F85\u72B6\u306E\u66F8\u304D\u8FBC\u307F\u4E2D\u306B\u30A8\u30E9\u30FC\u767A\u751F\u3002\u3082\u3046\u4E00\u5EA6\u8A66\u3057\u3066\u307F\u3066\u304F\u3060\u3055\u3044\u3002
 invitation.utils.unable.write.title=\u62DB\u5F85\u72B6\u66F8\u304D\u8FBC\u307F\u4E0D\u53EF
 
-invitationfiles.description=PowerFolder \u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB(.invitation)
+invitation_files.description=PowerFolder \u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB(.invitation)
 
 invite_received_handler.notify.message={0} \u3055\u3093\u304B\u3089 PowerFolder \u306E\u62DB\u5F85\u72B6\u3092\u53D7\u3051\u53D6\u308A\u307E\u3057\u305F\u3002
 invite_received_handler.notify.title=\u62DB\u5F85\u72B6\u306E\u53D7\u3051\u53D6\u308A
