--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -532,9 +532,9 @@ general.files=Bestanden
 general.folder=Folder
 general.folder.public=Publiek (toegangkelijk voor iedereen)
 general.folder.secret=Prive (vereist invitatie)
-general.foldername=Naam
+general.folder_name=Naam
 ##general.friday=Friday
-general.friendlist=Vriendenlijst
+general.friend_list=Vriendenlijst
 general.from=van
 general.help=help
 general.hide=verberg
@@ -543,7 +543,7 @@ general.inet=i-net
 ##general.invitor=Invitor
 ##general.lan_only=LAN only
 general.local_copy_at=Lokale kopie
-general.localcopyplace=Kies een plek voor lokale kopie
+general.local_copy_place=Kies een plek voor lokale kopie
 general.localized_date_format=dd MMMM yyyy
 general.localnet=lokaal
 general.member=Lid
@@ -553,8 +553,8 @@ general.member=Lid
 ##general.more=More
 ##general.more.lower_case=more
 ##general.neverAskAgain=Never ask this again
-general.notavailable=Niet beschikbaar
-general.notfound=niet gevonden
+general.not_available=Niet beschikbaar
+general.not_found=niet gevonden
 general.ok=OK
 general.ok.key=O
 general.overwrite=Overschrijven
@@ -585,19 +585,19 @@ general.yesterday=vandaag
 ##hide_preview.key=H
 ##hide_preview.name=Hide Preview Folders
 
-hideoffline.description=De niet verbonden gebruikers worden verborgen 
-hideoffline.key=V
-hideoffline.name=Verberg niet verbonden gebruikers 
+hide_offline.description=De niet verbonden gebruikers worden verborgen
+hide_offline.key=V
+hide_offline.name=Verberg niet verbonden gebruikers
 
-imagefileinfo.resolution=Resolutie
-imagefileinfo.unknown=Onbekend 
+image_file_info.resolution=Resolutie
+image_file_info.unknown=Onbekend
 
-infoside.title=Informatie
+info_side.title=Informatie
 
 ##invitation.utils.unable.write.text=Error while writing invitation, please try again.
 ##invitation.utils.unable.write.title=Unable to write invitation
 
-invitationfiles.description=PowerFolder uitnodigingen
+invitation_files.description=PowerFolder uitnodigingen
 
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
